Implement JWT authentication

--- a/back-end/KAOPIZ.WebAPI/appsettings.json
+++ b/back-end/KAOPIZ.WebAPI/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "jwtTokenConfig": {
+    "secret": "147050910108645073641234567891231234321",
+    "issuer": "Kaopiz",
+    "audience": "Kaopiz",
+    "accessTokenExpiration": 10,
+    "refreshTokenExpiration": 43200 // 30 days
+  }
 }
