--- a/back-end/KAOPIZ.Services/KAOPIZ.Services.csproj
+++ b/back-end/KAOPIZ.Services/KAOPIZ.Services.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\KAOPIZ.Common\KAOPIZ.Common.csproj" />
+  </ItemGroup>
+
 </Project>
