--- a/back-end/KAOPIZ.WebAPI/KAOPIZ.WebAPI.csproj
+++ b/back-end/KAOPIZ.WebAPI/KAOPIZ.WebAPI.csproj
@@ -8,6 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.15" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.4" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="8.1.4" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="8.1.4" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\KAOPIZ.Common\KAOPIZ.Common.csproj" />
+    <ProjectReference Include="..\KAOPIZ.Services\KAOPIZ.Services.csproj" />
   </ItemGroup>
 
 </Project>
